# Tech

./: .gitignore  TODO  Verdiepings_Verslag.docx  Verdiepingsverslag.docx  Voorbeeld document verdieping met uitleg - v3.docx  stm32cubeide_config.epf  ~$rdiepings_Verslag.docx
ArduinoTester/: ArduinoTester.ino
BankingAppCS/: BankingAppCS.sln  Form1.Designer.cs  Form1.cs
BankingAppCS/Properties/: Resources.Designer.cs  Settings.Designer.cs
NonBlockingBlinkingLed/: NonBlockingBlinkingLed.ino
PWMLed/: PWMLed.ino
RemoteControl/RemoteControlReceiver/: RemoteControlReceiver.ino
RemoteControl/RemoteControlTransmitter/: Program.cs  RemoteControlTransmitter.sln
Robotic_Arm/: Robotic_Arm.docx
SEM_1/: Proftaak.odt  Verdiepings_Verslag.docx
SEM_1/ArduinoTester/: ArduinoTester.ino
SEM_1/BankingAppCS/: Banking.cs  BankingAppCS.csproj  Form1.cs  Program.cs
SEM_1/BankingAppCS/Properties/: AssemblyInfo.cs
SEM_1/NonBlockingDebounce/: NonBlockingDebounce.ino
SEM_1/RemoteControl/RemoteControlReceiver/: RemoteControlReceiver.ino
SEM_1/RemoteControl/RemoteControlTransmitter/: Program.cs  RemoteControlTransmitter.csproj
SEM_1/SerialPlotter/: SerialPlotter.ino
SEM_1/TraficControl/: TraficControl.ino
SEM_1/TraficControlCS/: ClassDiagram1.cd  Program.cs  TraficControlCS.csproj  TraficControlCS.sln  Trafic_Light.cs
SEM_1/intro/: Template projectverslag  Design Challenge NJ21 UPDATE.docx  ~$mplate projectverslag  Design Challenge NJ21 UPDATE.docx  ~WRL3031.tmp
SEM_1/intro/busn/: Opdrachtenboek Oriëntatie Bedrijfskundige verkenning V1.1.docx  Orientatieverslag.docx  business rstudio excel.docx  busn_0.docx
SEM_1/intro/infra/: infra.docx  infra_template.docx
SEM_1/intro/media/: Orientatieverslag_Media.docx
SEM_1/intro/tech/: Tekening.vsdx  voortgang.docx
SEM_2/: .~lock.SEM2.docx#  SEM2.docx  Voorbeeld-toets-theorie.docx  ~WRD2297.tmp  ~WRL3898.tmp
SEM_2/Class_Diagram/: Class_Diagram.csproj  Class_Diagram.sln  Program.cs
SEM_2/Class_Diagram/Properties/: AssemblyInfo.cs
SEM_3/embedded/: .mxproject
SEM_3/embedded/button/: CMakeLists.txt
SerialPlotter/: SerialPlotter.ino
TinkerCAD/: Powerful Robo.brd
TraficControlCS/: Program.cs  TraficControlCS.csproj
TraficControlCS/Properties/: AssemblyInfo.cs  Settings.Designer.cs
communication/CoAP_server/src/: main.cpp
communication/HTTP_server/: app.py
communication/i2c/: I2C.docx  spark.cpp
communication/i2c/multi-master/: platformio.ini
communication/i2c/scanner/: scanner.ino
communication/iot/rework/: rework.docx
communication/server/: CMakeLists.txt  Makefile  main
communication/server/src/: main.cpp  test.cpp
embedded/: .cproject  gitlab.sh
embedded/STM32F303RET6/: CMakeLists.txt  platformio.ini
embedded/STM32F303RET6/include/: gpio.h  nvic.h  tim.h
embedded/STM32F303RET6/src/: exti.c  gpio.c  main.c  nvic.c  sys.c  tim.c
embedded/hello_world/src/: main.cpp
project/: .~lock.System Design Smart Washing Machine.docx#  .~lock.wasmachine.dotx#
project/design/: gitlab.sh
project/design/wasmachine/: System Design Smart Washing Machine.docx  wasmachine.dotx
s3/communication/i2c/: I2C.docx
s3/embedded/STM32F303RET6/: platformio.ini
s3/software/algo/: TODO.md  gitlab.sh  reading_guide.md
s3/software/algo/lib_c++/: CMakeLists.txt
s3/software/algo/lib_c++/ass4/LLExample/cpp/test/: Test.cpp
s3/software/design/bread_baker/: CMakeLists.txt  bread_baker_state_diagram.puml  breadbake
s3/software/design/bread_baker/product/: Program.h  States.h  Tasks.h
s4/algo/PYB/: doc.docx  main.py
s4/algo/Peking/: ALGO.puml  main.py  test.json
s4/algo/search/: Makefile  (+1 more)
s4/sync/: main.py
software/algo/: feedback.md  gitlab.sh  main.c
software/algo/lib_c++/: CMakeLists.txt
software/algo/lib_c++/ass4/LLExample/cpp/product/: linkedList.cpp
software/algo/lib_c++/ass4/LLExample/ll_cpp/: LinkedList
software/algo/lib_c++/ass4/LLExample/ll_cpp/test/: llTest.cpp
software/algo/memory_manager/: CMakeLists.txt
software/algo/memory_manager/ass5/: MemManager  MemManagerTest  main.cpp
software/algo/memory_manager/ass5/test/: mytests.cpp
software/algo/stacks_queues/: CMakeLists.txt
software/algo/stacks_queues/ass3/myqueue/: myqueue_test
software/algo/stacks_queues/ass3/myqueue/product/: myqueue.c  myqueue.h
software/algo/stacks_queues/ass3/myqueue/test/: myqueue_test.c
software/algo/stacks_queues/ass3/mystack/: main_test  mystack
software/algo/stacks_queues/ass3/mystack/product/: main.c  mystack.c
software/algo/stacks_queues/ass3/mystack/test/: mystack_test.c
software/design/: NOTE.md  gitlab.sh
(+303 files in other folders)
